# hh_helper

./: README.md  db_schemas.py  etl_launch.py  etl_one.py  etl_vacancies.py  get_describe_by_id.py  mian_query.pgsql  open_a.py  process.ipynb  pyproject.toml  some.json  vac.md  vacancy_summarize.py
data/raw/pagination/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  3.json  4.json  5.json  6.json  7.json  79654774.json  8.json  80125726.json  80865366.json  81094289.json  81243565.json  81594861.json  81602134.json  81822043.json  82343748.json  83185391.json  83225106.json  83274303.json  83403891.json  83405722.json  83453960.json  83509041.json  83601620.json  83617095.json  83651141.json  83679681.json  83701577.json  (+95 more)
