[tool.poetry]
name = "hh-helper"
version = "0.1.0"
description = ""
authors = ["Nick <nicklisits@gmail.com>"]
readme = "README.md"
packages = [{include = "hh_helper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.0.3"
sqlalchemy = "^2.0.19"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
sqlalchemy-utils = "^0.41.1"
openai = "^0.27.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
